Implementierung von PWM Funktionen

--- a/StartPage.html
+++ b/StartPage.html
@@ -21,7 +21,7 @@
 
     <center>
         <div class="btn-group-vertical btn-lg">
-            <a type="button", href="GetraenkePage.html", class="btn btn-outline-success btn-lg">Getränk wählen</a>
+            <a type="button" , href="GetraenkePage.html" , class="btn btn-outline-success btn-lg">Getränk wählen</a>
             <div class="btn-group">
                 <button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown">
             Einstellungen
@@ -32,21 +32,19 @@
                 </div>
                 <button type="button" class="btn btn-outline-info">Hilfe</button>
             </div>
-<form action="forms/savePerson" method="GET">
-<fieldset>
-<legend>Person GET</legend>
-<input value="Müller" type="text" name="persName"
-placeholder="Name"><br>
-<input value="21" type="number" name="persAge"
-placeholder="Alter">
-<input type="submit" value="Senden">
-</fieldset>
-</form>
+            <form action="forms/savePerson" method="GET">
+                <fieldset>
+                    <legend>Person GET</legend>
+                    <input value="Müller" type="text" name="persName" placeholder="Name"><br>
+                    <input value="21" type="number" name="persAge" placeholder="Alter">
+                    <input type="submit" value="Senden">
+                </fieldset>
+            </form>
 
 
     </center>
 
-    
+
 
 
 </body>
