--- a/StartPage.html
+++ b/StartPage.html
@@ -29,6 +29,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">Konfiguration</a>
                     <a class="dropdown-item" href="#">Allgemein</a>
+                    <a class="dropdown-item" href="/Test/id/:1">Test</a>
                 </div>
                 <button type="button" class="btn btn-outline-info">Hilfe</button>
             </div>
