--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="Style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="bootstrap.min.css">
+    <script src="StartPage_script.js"></script>
     <script src="jquery.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.min.js"></script>
@@ -29,9 +30,9 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="#">Konfiguration</a>
                     <a class="dropdown-item" href="#">Allgemein</a>
-                    <a class="dropdown-item" onclick="myFunction() href="/Test/id/1">Test</a>
+                    <a class="dropdown-item">Test</a>
                 </div>
-                <button type="button" class="btn btn-outline-info">Hilfe</button>
+                <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
             </div>
             <form action="forms/savePerson" method="GET">
                 <fieldset>
