Eingeben des Dutycycle

--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -36,9 +36,8 @@
             </div>
             <form action="forms/savePerson" method="GET">
                 <fieldset>
-                    <legend>Person GET</legend>
-                    <input value="Müller" type="text" name="persName" placeholder="Name"><br>
-                    <input value="21" type="number" name="persAge" placeholder="Alter">
+                    <legend>Dutycycle</legend>
+                    <input value="50" type="number" name="Dutycycle" id="Dutycycle">
                     <input type="submit" value="Senden">
                 </fieldset>
             </form>
