--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -38,7 +38,7 @@
                 <fieldset>
                     <legend>Dutycycle</legend>
                     <input value="50" type="number" name="Dutycycle" id="Dutycycle">
-                    <input type="submit" value="Senden">
+                    <input type="submit" onclick="myFunction()" value="Senden">
                 </fieldset>
             </form>
 
