--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -34,7 +34,7 @@
                 </div>
                 <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
             </div>
-            <form action="forms/savePerson" method="GET">
+            <form  method="GET">
                 <fieldset>
                     <legend>Dutycycle</legend>
                     <input value="50" type="number" name="Dutycycle" id="Dutycycle">
