--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -37,12 +37,12 @@
             <form  method="GET">
                 <fieldset>
                     <legend>Dutycycle</legend>
-                    <input value="50" type="number" name="Dutycycle" id="Dutycycle">
+                    <input value="" type="number" name="Dutycycle" id="Dutycycle">
                     <input type="submit" onclick="myFunction()" value="Senden">
                 </fieldset>
             </form>
 
-            <p id="demo"></p>
+            <div id="demo"></div>
 
 
     </center>
