--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -33,6 +33,7 @@
                     <a class="dropdown-item">Test</a>
                 </div>
                 <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
+                <button type="button" onclick="Motor()" class="btn btn-outline-info">Test</button>
             </div>
             <form  method="GET">
                 <fieldset>
