--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -33,7 +33,8 @@
                     <a class="dropdown-item">Test</a>
                 </div>
                 <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
-                <button type="button" onclick="Motor()" class="btn btn-outline-info">Test</button>
+                <button type="button" onclick="MotorBremsen()" class="btn btn-outline-info">Bremsen</button>
+                <button type="button" onclick="MotorBeschleunigen()" class="btn btn-outline-info">Beschleunigen</button>
             </div>
             <form  method="GET">
                 <fieldset>
