--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -35,6 +35,8 @@
                 <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
                 <button type="button" onclick="MotorBremsen()" class="btn btn-outline-info">Bremsen</button>
                 <button type="button" onclick="MotorBeschleunigen()" class="btn btn-outline-info">Beschleunigen</button>
+                <button type="button" onclick="links()" class="btn btn-outline-info">Beschleunigen</button>
+                <button type="button" onclick="rechts()" class="btn btn-outline-info">Beschleunigen</button>
             </div>
             <form  method="GET">
                 <fieldset>
