--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -33,8 +33,8 @@
                     <a class="dropdown-item">Test</a>
                 </div>
                 <button type="button" onclick="myFunction()" class="btn btn-outline-info">Hilfe</button>
-                <button type="button" onclick="links()" class="btn btn-outline-info">Beschleunigen</button>
-                <button type="button" onclick="rechts()" class="btn btn-outline-info">Beschleunigen</button>
+                <button type="button" onclick="links()" class="btn btn-outline-info">links</button>
+                <button type="button" onclick="rechts()" class="btn btn-outline-info">rechts</button>
             </div>
             <form  method="GET">
                 <fieldset>
