--- a/Public/StartPage.html
+++ b/Public/StartPage.html
@@ -28,7 +28,7 @@
             Einstellungen
             </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Konfiguration</a>
+                    <a class="dropdown-item" href="KonfigurationPage.html">Konfiguration</a>
                     <a class="dropdown-item" href="#">Allgemein</a>
                     <a class="dropdown-item">Test</a>
                 </div>
