--- a/Public/LongdrinkPage.html
+++ b/Public/LongdrinkPage.html
@@ -26,9 +26,9 @@
     <center>
         <div class="list-group">
             <a href="#" onclick="wodkaorange()" onclick="myFunction()" class="list-group-item list-group-item-action">Wodka Orange</a>
-            <a href="#" onclick="myFunction()" class="list-group-item list-group-item-action">Malibu Orange</a>
-            <a href="#" onclick="myFunction_warning()" class="list-group-item list-group-item-action">Cola Rum</a>
-            <a href="#" onclick="myFunction_warning()" class="list-group-item list-group-item-action"></a>
+            <a href="#" onclick="malibu()" onclick="myFunction()" class="list-group-item list-group-item-action">Malibu Orange</a>
+            <a href="#" onclick="rum()" onclick="myFunction_warning()" class="list-group-item list-group-item-action">Cola Rum</a>
+            <a href="#" onclick="wodkaorange()" onclick="myFunction_warning()" class="list-group-item list-group-item-action"></a>
         </div>
     </center>
 
