--- a/Public/LongdrinkPage.html
+++ b/Public/LongdrinkPage.html
@@ -28,7 +28,7 @@
             <a href="#" onclick="wodkaorange()" onclick="myFunction()" class="list-group-item list-group-item-action">Wodka Orange</a>
             <a href="#" onclick="malibu()" onclick="myFunction()" class="list-group-item list-group-item-action">Malibu Orange</a>
             <a href="#" onclick="rum()" onclick="myFunction_warning()" class="list-group-item list-group-item-action">Cola Rum</a>
-            <a href="#" onclick="wodkaorange()" onclick="myFunction_warning()" class="list-group-item list-group-item-action"></a>
+            <a href="#" onclick="whiskey()" onclick="myFunction_warning()" class="list-group-item list-group-item-action">Whiskey</a>
         </div>
     </center>
 
